Added a bucket-load of stuff Including skills, skill.h, skill.cpp. Also organised everything.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
-project(ImGuiProject)
+project(ImGui-Scape)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -8,7 +8,7 @@ find_package(glfw3 3.3 REQUIRED)
 find_package(GLEW REQUIRED)
 
 set(IMGUI_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/external/imgui)
-set(CUSTOM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(CUSTOM_INCLUDE_DIR include)
 set(IMGUI_SOURCES
     ${IMGUI_SOURCE_DIR}/imgui.cpp
     ${IMGUI_SOURCE_DIR}/imgui_impl_glfw.cpp
@@ -17,12 +17,23 @@ set(IMGUI_SOURCES
     ${IMGUI_SOURCE_DIR}/imgui_widgets.cpp
     ${IMGUI_SOURCE_DIR}/imgui_tables.cpp
     ${IMGUI_SOURCE_DIR}/imgui_demo.cpp
-    ${CUSTOM_INCLUDE_DIR}/imgui_utils.cpp
+    ${CUSTOM_INCLUDE_DIR}/utils/imgui_utils.cpp
+    ${CUSTOM_INCLUDE_DIR}/game/player.cpp
+    ${CUSTOM_INCLUDE_DIR}/game/game.cpp
+        include/panels/admin_panel.cpp
+        include/panels/admin_panel.h
+        include/game/game.cpp
+        include/game/game.h
+        include/game/player.cpp
+        include/game/player.h
+        include/game/player_skills/skill.cpp
+        include/game/player_skills/skill.h
 
 )
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/external/
+    ${CMAKE_CURRENT_SOURCE_DIR}/include/
 )
 
 add_executable(${CMAKE_PROJECT_NAME} src/main.cpp ${IMGUI_SOURCES})
